--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
     "@nestjs/common": "^11.1.3",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.3",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.1.3",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "mongoose": "^8.16.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
-    "sib-api-v3-typescript": "^2.2.2"
+    "sib-api-v3-typescript": "^2.2.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -40,6 +44,7 @@
     "@nestjs/testing": "^11.1.3",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.12.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.34",
